--- a/DarkTheme/black.css
+++ b/DarkTheme/black.css
@@ -1,4 +1,4 @@
-body { background: #222; color: #e6e6e6; font-family: "Helvetica Neue",Helvetica,"Segoe UI",Tahoma,Arial,sans-serif; }
+body { background: #222; color: #e6e6e6; font-family: "Helvetica Neue",Helvetica,"Segoe UI",Tahoma,Arial,sans-serif !important; }
 
 a { color: #949494; }
 
