--- a/DarkTheme/black.css
+++ b/DarkTheme/black.css
@@ -1,5 +1,9 @@
 body { background: #222; color: #e6e6e6; }
 
+.c-message--light .c-message__content_header { margin: 9px 0 -5px; border-top: 1px solid #484D52; padding-top: 8px; }
+
+.c-message__body { color: #AAAAAA; }
+
 a { color: #949494; }
 
 a:link, a:visited { color: #949494; }
@@ -1493,7 +1497,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket { color: #bf360c; }
 
 .dense_theme ts-message .message_content .message_current_status { border-color: #363636; }
 
-.c-message--light .c-message__sender .c-message__sender_link { color: #e6e6e6; }
+.c-message--light .c-message__sender .c-message__sender_link { color: #707070; }
 
 .light_theme ts-message { color: #e6e6e6; }
 
