--- a/DarkTheme/black.css
+++ b/DarkTheme/black.css
@@ -4,6 +4,8 @@ body { background: #222; color: #e6e6e6; font-family: "Helvetica Neue",Helvetica
 
 .c-message__body { color: #AAAAAA !important; }
 
+#footer_msgs { padding-top: 10px; margin-bottom: -10px; }
+
 a { color: #949494; }
 
 a:link, a:visited { color: #949494; }
