--- a/DarkTheme/black.css
+++ b/DarkTheme/black.css
@@ -1,4 +1,4 @@
-body { background: #222; color: #e6e6e6; font-family: "Helvetica Neue",Helvetica,"Segoe UI",Tahoma,Arial,sans-serif !important; }
+body { background: #222; color: #e6e6e6; font-family: "Helvetica Neue",Helvetica,"Segoe UI",Tahoma,Arial,sans-serif !important; -webkit-text-stroke: 0.15px; }
 
 .c-message__content_header { margin: 9px 0 -5px !important; border-top: 1px solid #484D52 !important; padding-top: 8px !important; }
 
